--- a/src/main/resources/templates/returning-to-work/form.html
+++ b/src/main/resources/templates/returning-to-work/form.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja"
+      xmlns:th="http://www.thymeleaf.org"
+>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 WIP
+<span th:text="${test}"></span>
 </body>
 </html>
