--- a/src/main/resources/templates/returning-to-work/form.html
+++ b/src/main/resources/templates/returning-to-work/form.html
@@ -5,9 +5,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" th:href="@{/css/main.css}" />
 </head>
 <body>
 WIP
+<p class="text-blue-700">Tailwindを入れたよ！</p>
 <span th:text="${test}"></span>
 </body>
 </html>
