TailWind 追跡不要ファイルgitignore追加

--- a/src/main/resources/templates/returning-to-work/form.html
+++ b/src/main/resources/templates/returning-to-work/form.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 WIP
-<p class="text-blue-700">Tailwindを入れたよ！</p>
+<p class="text-blue-700 text-3xl">Tailwindを入れたよ！</p>
 <span th:text="${test}"></span>
 </body>
 </html>
