--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -9,19 +9,21 @@
 </head>
 <body>
 <section class="text-gray-600 body-font relative">
-    <div class="container py-24 mx-auto flex">
-        <div class="md:w-1/2 p-8 flex flex-col mx-auto w-full mt-10 md:mt-0 relative z-10">
-            <div class="relative mt-6">
-                <label for="email" class="leading-7 text-sm text-gray-600">ユーザーID</label>
-                <input type="email" id="email" name="email" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+    <form th:action="@{/login}" method="post">
+        <div class="container py-24 mx-auto flex">
+            <div class="md:w-1/2 p-8 flex flex-col mx-auto w-full mt-10 md:mt-0 relative z-10">
+                <div class="relative mt-6">
+                    <label for="email" class="leading-7 text-sm text-gray-600">ユーザーID</label>
+                    <input type="email" id="email" name="email" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                </div>
+                <div class="relative mt-4">
+                    <label for="password" class="leading-7 text-sm text-gray-600">パスワード</label>
+                    <input type="email" id="password" name="email" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                </div>
+                <button class="text-white bg-indigo-500 border-0 py-2 w-1/3 mt-6 mx-auto px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">ログイン</button>
             </div>
-            <div class="relative mt-4">
-                <label for="password" class="leading-7 text-sm text-gray-600">パスワード</label>
-                <input type="email" id="password" name="email" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
-            </div>
-            <button class="text-white bg-indigo-500 border-0 py-2 w-1/3 mt-6 mx-auto px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">ログイン</button>
         </div>
-    </div>
+    </form>
 </section>
 </body>
 </html>
