name属性の変更及び文言の統一

--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -13,7 +13,7 @@
         <div class="container py-24 mx-auto flex">
             <div class="md:w-1/2 p-8 flex flex-col mx-auto w-full mt-10 md:mt-0 relative z-10">
                 <div class="relative mt-6">
-                    <label for="authId" class="leading-7 text-sm text-gray-600">ユーザーID</label>
+                    <label for="authId" class="leading-7 text-sm text-gray-600">ログインID</label>
                     <input type="text" id="authId" name="authId" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
                 </div>
                 <div class="relative mt-4">
