--- a/src/main/resources/templates/returning-to-work/form.html
+++ b/src/main/resources/templates/returning-to-work/form.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja"
       xmlns:th="http://www.thymeleaf.org"
+      th:replace="~{fragments/layout :: layout(~{::title}, ~{::main}, _)}"
 >
 <head>
     <meta charset="UTF-8">
     <title>帰社登録</title>
-    <link rel="stylesheet" th:href="@{/css/main.css}" />
 </head>
 <body>
-<section class="text-gray-600 body-font relative">
-    <div class="container py-24 mx-auto flex">
+<main>
+    <div class="container mx-auto flex">
         <div class="md:w-1/2 p-8 flex flex-col mx-auto w-full mt-10 md:mt-0 relative z-10">
             <div class="relative mt-6">
                 <label for="email" class="leading-7 text-sm text-gray-600">名前</label>
@@ -22,6 +22,6 @@
             <button class="text-white bg-indigo-500 border-0 py-2 w-1/3 mt-6 mx-auto px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">帰社</button>
         </div>
     </div>
-</section>
+</main>
 </body>
 </html>
