--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -5,7 +5,7 @@
 >
 <head>
     <meta charset="UTF-8">
-    <title>ログインページ</title>
+    <title>Sign Up</title>
 </head>
 <body>
 <main>
@@ -22,7 +22,7 @@
                         <input type="password" id="password" name="password" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
                     </div>
                     <div class="relative mt-4">
-                        <label for="userName" class="leading-7 text-sm text-gray-600">ユーザーネーム</label>
+                        <label for="userName" class="leading-7 text-sm text-gray-600">ユーザー名</label>
                         <input type="text" id="userName" name="userName" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
                     </div>
                     <div class="relative mt-4">
