--- a/src/main/resources/templates/returning-to-work/index.html
+++ b/src/main/resources/templates/returning-to-work/index.html
@@ -17,8 +17,20 @@
             </p>
             <form th:action="@{/returning-to-works}" method="post">
                 <div class="relative mt-4">
-                    <label for="reason" class="leading-7 text-sm text-gray-600">帰社理由(任意)</label>
-                    <textarea id="reason" name="reason" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-10 px-3 leading-8 transition-colors duration-200 ease-in-out"></textarea>
+                    <label for="reasonSummary" class="leading-7 text-sm text-gray-600">帰社理由</label>
+                    <select name="reasonSummary" id="reasonSummary" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-3 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                        <option value="1">面談</option>
+                        <option value="2">自主学習</option>
+                        <option value="3">遊びに来ただけ</option>
+                        <option value="4">その他</option>
+                    </select>
+                </div>
+                <div class="relative mt-4">
+                    <label for="reasonDetail" class="leading-7 text-sm text-gray-600">詳細(任意)</label>
+                    <textarea id="reasonDetail" name="reasonDetail" cols="10"
+                              class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-3 px-3 leading-8 transition-colors duration-200 ease-in-out"
+                              placeholder="xxさんに会いに来た&#13;xxのカリキュラム学習など"
+                    ></textarea><!--/* 間に合わせで非推奨。開業するにはJSやCSSを使う必要がありそう */-->
                 </div>
                 <button class="block text-white bg-indigo-500 border-0 py-2 w-1/3 mt-6 mx-auto px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">帰社</button>
             </form>
