帰社登録画面の文言修正

--- a/src/main/resources/templates/returning-to-work/index.html
+++ b/src/main/resources/templates/returning-to-work/index.html
@@ -13,7 +13,7 @@
         <div class="md:w-1/2 p-8 flex flex-col mx-auto w-full mt-10 md:mt-0 relative z-10">
             <p class="text-xl text-center">
                 本日もお疲れ様です！！<br>
-                帰社登録をお願いいたします。
+                本日の帰社記録をお願いいたします。
             </p>
             <form th:action="@{/returning-to-works}" method="post">
                 <div class="relative mt-4">
@@ -32,7 +32,7 @@
                               placeholder="xxさんに会いに来た&#13;xxのカリキュラム学習など"
                     ></textarea><!--/* 間に合わせで非推奨。開業するにはJSやCSSを使う必要がありそう */-->
                 </div>
-                <button class="block text-white bg-indigo-500 border-0 py-2 w-1/3 mt-6 mx-auto px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">帰社</button>
+                <button class="block text-white bg-indigo-500 border-0 py-2 w-1/3 mt-6 mx-auto px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">記録</button>
             </form>
         </div>
     </div>
