--- a/src/main/resources/templates/returning-to-work/index.html
+++ b/src/main/resources/templates/returning-to-work/index.html
@@ -17,8 +17,8 @@
             </p>
             <form th:action="@{/returning-to-works}" method="post">
                 <div class="relative mt-4">
-                    <label for="reasonSummary" class="leading-7 text-sm text-gray-600">帰社理由</label>
-                    <select name="reasonSummary" id="reasonSummary" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-3 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                    <label for="reasonSummaryId" class="leading-7 text-sm text-gray-600">帰社理由</label>
+                    <select name="reasonSummaryId" id="reasonSummaryId" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-3 px-3 leading-8 transition-colors duration-200 ease-in-out">
                         <option value="1">面談</option>
                         <option value="2">自主学習</option>
                         <option value="3">遊びに来ただけ</option>
