--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -32,9 +32,9 @@
                         </select>
                     </div>
                     <div class="relative mt-4">
-                        <label for="role" class="leading-7 text-sm text-gray-600">役職</label>
-                        <select name="role" id="role" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-3 px-3 leading-8 transition-colors duration-200 ease-in-out">
-                            <option value="1">役職テスト</option>
+                        <label for="roleId" class="leading-7 text-sm text-gray-600">役職</label>
+                        <select name="roleId" id="roleId" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-3 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                            <option th:each="role : ${rolePullDown}" th:value="${role.roleId}" th:text="${role.roleName}">(役職名)</option>
                         </select>
                     </div>
                     <button class="text-white bg-indigo-500 border-0 py-2 w-1/3 mt-6 mx-auto px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">ユーザー登録</button>
