--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -28,7 +28,7 @@
                     <div class="relative mt-4">
                         <label for="authority" class="leading-7 text-sm text-gray-600">権限</label>
                         <select name="authority" id="authority" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-3 px-3 leading-8 transition-colors duration-200 ease-in-out">
-                            <option value="ADMIN">権限テスト</option>
+                            <option th:each="auth : ${authPullDown}" th:value="${auth.key}" th:text="${auth.value}">(権限名)</option>
                         </select>
                     </div>
                     <div class="relative mt-4">
