URL及び文言変更

--- a/src/main/resources/templates/going-home/index.html
+++ b/src/main/resources/templates/going-home/index.html
@@ -12,7 +12,11 @@
     <div class="container mx-auto flex">
         <div class="md:w-1/2 p-8 flex flex-col mx-auto w-full mt-10 md:mt-0 relative z-10">
             <p class="text-xl text-center">
-                お帰りの際は<br>
+                帰社登録ありがとうございます。<br>
+                ログアウトしてからごゆっくりとお過ごしください。
+            </p>
+            <p class="text-xl text-center mt-4">
+                お帰りの際はお手数ですが<br>
                 帰宅登録をお願いいたします。
             </p>
             <form th:action="@{/going-homes}" method="post">
