--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -10,32 +10,37 @@
 <body>
 <main>
     <section class="text-gray-600 body-font relative">
-        <form th:action="@{/users}" method="post">
+        <form th:action="@{/users}" method="post" th:object="${userForm}">
             <div class="container mx-auto flex">
                 <div class="md:w-1/2 p-8 flex flex-col mx-auto w-full mt-10 md:mt-0 relative z-10">
                     <div class="relative mt-6">
                         <label for="authId" class="leading-7 text-sm text-gray-600">ログインID</label>
                         <input type="text" id="authId" name="authId" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                        <p  class="text-red-400" th:if="${#fields.hasErrors('authId')}" th:errors="*{authId}">
                     </div>
                     <div class="relative mt-4">
                         <label for="password" class="leading-7 text-sm text-gray-600">パスワード</label>
                         <input type="password" id="password" name="password" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                        <p  class="text-red-400" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">
                     </div>
                     <div class="relative mt-4">
                         <label for="userName" class="leading-7 text-sm text-gray-600">ユーザー名</label>
                         <input type="text" id="userName" name="userName" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                        <p  class="text-red-400" th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}">
                     </div>
                     <div class="relative mt-4">
                         <label for="authority" class="leading-7 text-sm text-gray-600">権限</label>
                         <select name="authority" id="authority" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-3 px-3 leading-8 transition-colors duration-200 ease-in-out">
                             <option th:each="auth : ${authPullDown}" th:value="${auth.key}" th:text="${auth.value}">(権限名)</option>
                         </select>
+                        <p  class="text-red-400" th:if="${#fields.hasErrors('authority')}" th:errors="*{authority}">
                     </div>
                     <div class="relative mt-4">
                         <label for="roleId" class="leading-7 text-sm text-gray-600">役職</label>
                         <select name="roleId" id="roleId" class="w-full bg-white rounded border border-gray-300 focus:border-indigo-500 focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-3 px-3 leading-8 transition-colors duration-200 ease-in-out">
                             <option th:each="role : ${rolePullDown}" th:value="${role.roleId}" th:text="${role.roleName}">(役職名)</option>
                         </select>
+                        <p  class="text-red-400" th:if="${#fields.hasErrors('roleId')}" th:errors="*{roleId}">
                     </div>
                     <button class="text-white bg-indigo-500 border-0 py-2 w-1/3 mt-6 mx-auto px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">ユーザー登録</button>
                 </div>
