--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,20 +10,14 @@
 <header class="bg-slate-50" th:fragment="header">
     <div class="flex justify-between w-4/5 lg:w-1/2 mx-auto p-5">
         <div class="flex">
-            <h1><a th:href="@{/}">OfficeSmile</a></h1>
-            <nav class="ml-10 text-gray-400" th:if="${#authorization.expression('isAuthenticated()')}">
+            <h1>
+                <span th:if="${requestURI == '/going-homes/complete'}">OfficeSmile</span>
+                <a th:unless="${requestURI == '/going-homes/complete'}" th:href="@{/}">OfficeSmile</a>
+            </h1>
+            <nav class="ml-10 text-gray-400" th:if="${#authorization.expression('isAuthenticated()') and requestURI != '/going-homes/complete'}">
                 <ul class="flex">
-                    <li>
-                        <a th:href="@{/}"
-                           th:classappend="${requestURI == '/returning-to-works' || requestURI == '/going-homes' || requestURI == '/sitemap'}
-                           ? text-slate-700
-                           : ''"
-                        >
-                            トップ
-                        </a>
-                    </li>
                     <li class="ml-5">
-                        <a href="" th:classappend="${requestURI == '/history'} ? text-slate-700 : ''">
+                        <a href="" th:classappend="${requestURI == '/histories'} ? text-slate-700 : ''">
                             履歴
                         </a>
                     </li>
@@ -39,7 +33,7 @@
             <div th:text="${session.loggedInUser.userId + ' : ' + session.loggedInUser.userName}">
                 (ユーザーID : ユーザー名)
             </div>
-            <form th:action="@{/logout}" method="post" class="ml-5">
+            <form th:if="${requestURI != '/going-homes/complete'}" th:action="@{/logout}" method="post" class="ml-5">
                 <button>ログアウト</button>
             </form>
         </div>
