--- a/src/main/resources/templates/returning-to-work/index.html
+++ b/src/main/resources/templates/returning-to-work/index.html
@@ -10,10 +10,11 @@
 <body>
 <main>
     <div class="container mx-auto flex">
+        <div th:text="${message}"></div>
         <div class="md:w-1/2 p-8 flex flex-col mx-auto w-full mt-10 md:mt-0 relative z-10">
             <p class="text-xl text-center">
-                本日もお疲れ様です！！<br>
-                本日の帰社記録をお願いいたします。
+                お疲れ様です！！<br>
+                帰社登録をお願いいたします。
             </p>
             <form th:action="@{/returning-to-works}" method="post" th:object="${returningToWorkForm}">
                 <div class="relative mt-4">
@@ -33,7 +34,7 @@
                               placeholder="xxさんに会いに来た&#13;xxのカリキュラム学習など"
                     ></textarea><!--/* 間に合わせで非推奨。開業するにはJSやCSSを使う必要がありそう */-->
                 </div>
-                <button class="block text-white bg-indigo-500 border-0 py-2 w-1/3 mt-6 mx-auto px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">記録</button>
+                <button class="block text-white bg-indigo-500 border-0 py-2 w-1/3 mt-6 mx-auto px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">登録</button>
             </form>
         </div>
     </div>
