--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja"
       xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{fragments/layout :: layout(~{::title}, ~{::main}, ~{::script})}"
+      th:replace="~{fragments/layout :: layout(~{::title}, ~{::main}, _)}"
 >
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@
 </head>
 <body>
 <main>
-    <div th:if="${param.error}" id="flashMessage" class="w-1/4 absolute -translate-x-1/2 inset-x-2/4 top-4">
+    <div th:if="${param.error}" id="flashMessage" class="w-1/4 absolute z-20 -translate-x-1/2 inset-x-2/4 top-4">
         <p class="bg-red-300 text-white rounded p-5 text-center">ログインIDまたはパスワードが違います。</p>
     </div>
     <form th:action="@{/login}" method="post">
@@ -28,35 +28,5 @@
         </div>
     </form>
 </main>
-<script>
-    const delay = 40; // fps=25
-
-    function fadeOut() {
-        return new Promise(async (resolve, reject) => {
-            if (arguments.length > 0) {
-                const elem = arguments[0];
-                if (elem.style.display !== 'none') {
-                    const duration = arguments.length === 2 ? arguments[1] : 500;
-
-                    const coef = 1 / (duration / delay);
-                    elem.style.opacity = 1.0;
-                    var opacity = Number(elem.style.opacity);
-                    var animation = setInterval(() => {
-                        opacity -= coef;
-                        elem.style.opacity = opacity;
-                        if (opacity <= 0) {
-                            elem.style.display = 'none';
-                            clearInterval(animation);
-                            resolve(true);
-                        }
-                    }, delay);
-                }
-            }
-        });
-    }
-
-    const elem = document.querySelector("#flashMessage");
-    fadeOut(elem, 5000);
-</script>
 </body>
 </html>
