--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -14,6 +14,7 @@
 
 <section class="text-gray-600 body-font relative" th:insert="${content}"></section>
 
+<script th:src="@{/js/common.js}"></script>
 <script th:replace="${script}"></script>
 </body>
 </html>
