--- a/src/main/resources/templates/going-home/index.html
+++ b/src/main/resources/templates/going-home/index.html
@@ -33,7 +33,7 @@
         <form th:action="@{/logout}" method="post">
             <button class="block text-white bg-stone-400 border-0 py-2 min-w-40 w-1/3 mt-6 mx-auto px-6 focus:outline-none hover:bg-stone-500 rounded text-lg">ログアウト</button>
         </form>
-        <form th:action="@{/going-homes/complete}" method="post" class="ml-8">
+        <form th:action="@{/going-homes}" method="post" class="ml-8">
             <button class="block text-white bg-indigo-500 border-0 py-2 min-w-40 w-1/3 mt-6 mx-auto px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">帰宅登録</button>
         </form>
     </div>
